--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,55 @@
 /* Compile your LESS file! */
+.container{
+    width: 70%;
+    margin-left: 15%;
+}
+
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    width: 32%;
+    margin-left: 68%;
+}
+
+.navbar a{
+    text-decoration: none;
+    color: black;
+}
+
+.aboutcontainer h1{
+    font-size: 340%;
+    margin-left: 4%;
+    margin-top: -9%;  
+}
+
+.aboutcontainer h2{
+    margin-left: 4%;
+    font-style: italic;
+}
+
+.picture{
+    display: flex;
+    width: 32%;
+    margin-left: -5%;
+    padding: 9%;
+}
+
+.innercontainer{
+    background: #673ab71f;
+}
+
+.aboutcontainer p{
+    border-top: solid #0000003d;
+    padding: 2%;
+}
+
+.good{
+    text-align: center;
+}
+
+.first{
+    display: flex;
+    justify-content: space-between;
+    font-size: 26px;
+    font-family: "Abril Fatface";
+}
