--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,211 @@
-/* Compile your LESS file! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+    padding:0;
+    margin:0;
+    max-width:100%;
+}
+html,
+body {
+  height: 100%;
+  background-color: aliceblue;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+h4, h5 {
+  font-size: 26px;
+  font-family: 'Odibee Sans', cursive;
+}
+
+p {
+  margin: 13px 0;
+  color: #006342;
+}
+
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  font-size: 1.6rem;
+}
+
+.head {
+  display: flex;
+  justify-content: center;
+}
+
+h1{
+  font-size: 7rem;
+  color: #aebc55;
+  font-family: 'Squada One', cursive;
+}
+
+h2{
+  font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    line-height: 3;
+}
+
+h3{
+  font-size: 2rem;
+}
+
+.personal{
+  border: 1px solid;
+    background-color: #aebc55;
+}
+
+.word{
+  display: flex;
+  justify-content: center;
+  font-size: 2rem;
+}
+
+.word1{
+  display: flex;
+  justify-content: center;
+  margin-top: -26px;
+  color: #006342;
+}
+
+.exp{
+  display: flex;
+}
+
+.info{
+  display: flex;
+  justify-content: space-evenly;
+  border:1px solid;
+    background-color: #aebc55;
+}
